--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ tests all possible solutions to returns the one that makes the most geometric se
 
 <h3>Live Demo</h3>
 
-<p>Please <a href="/viewer.html">click here</a> to play around with the live demo yourself!</p>
+<p>Please <a href="/cs184-final-project/viewer.html">click here</a> to play around with the live demo yourself!</p>
 <p>Tested on Google Chrome</p>
 
 <h2>Contributions</h2>
