--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ tests all possible solutions to returns the one that makes the most geometric se
 
 <h3>Source video fed into Visual Odometry Algorithm</h3>
 
-<center><iframe width="560" height="315" src="https://www.youtube.com/embed/894ZjR8pNrk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>d
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/894ZjR8pNrk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 
 <h3>Unfiltered visual odometry, plotting XZ translation</h3>
 
