--- a/index.html
+++ b/index.html
@@ -106,8 +106,6 @@ tests all possible solutions to returns the one that makes the most geometric se
 
 <h2>Experiments with IMU</h2>
 
-<p>@Drew</p>
-
 <p>When using the IMU data, one issue that we ran into was the difference in the frame rate of the captured sensor data and
 the frame rate at which the GUI rendered the environment. More specifically, the rotation and translation data was captured at 50 frames per second
 whereas the 3D scene was rendered at 60 frames per second. To fix this issue, we linearly interpolated the IMU data according to the frame rate. </p>
@@ -121,8 +119,6 @@ whereas the 3D scene was rendered at 60 frames per second. To fix this issue, we
     to generate custom environments. Finally, we added parameters such as duration and perspective so that viewers could change the speed with which the camera
     traversed its path and switch between looking at the virtual camera trajectory from a bird's eye view to a first person view and vice-versa.
 </p>
-
-<p>@Ajay, Drew</p>
 
 <h2>Results</h2>
 
@@ -157,7 +153,7 @@ whereas the 3D scene was rendered at 60 frames per second. To fix this issue, we
 
 <h3>Drew Kaul</h3>
 <ul>
-    <li>3D environment generation and frontend </li>
+    <li>3D environment generation and frontend for 3D rendering</li>
     <li>Data and framerate interpolation </li>
 </ul>
 
