--- a/index.html
+++ b/index.html
@@ -143,6 +143,16 @@ whereas the 3D scene was rendered at 60 frames per second. To fix this issue, we
 <p>Please <a href="/cs184-final-project/viewer.html">click here</a> to play around with the live demo yourself!</p>
 <p>Tested on Google Chrome</p>
 
+<h2>Conclusion</h2>
+
+<p>
+    We learned that while monocular visual odometry can help reconstruct real world camera trajectories, it can be unreliable due to issues with perspective ambiguity. Thus, in the future
+    we would work with stereo vision instead. Furthermore, we learned that while the IMU data obtained by smartphones is ground truth, it is
+    often extremely noisy and requires extensive filtering to actually use. Finally, we learned how to take concepts we learned from this
+    class such as camera transforms, filtering and signal processing, spline interpolation, animation, and 3D geometry and apply them to more accurately
+    simulate real world camera movement with a virtual camera. 
+</p>
+
 <h2>Contributions</h2>
 
 <h3>Ajay Ramesh</h3>
