--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ whereas the 3D scene was rendered at 60 frames per second. To fix this issue, we
 
 <h3>Live Demo</h3>
 
-<p>Please <a href="/cs184-final-project/viewer.html">click here</a> to play around with the live demo yourself!</p>
+<p>Please click <a href="/cs184-final-project/viewer.html">here</a> to play around with the live demo yourself!</p>
 <p>Tested on Google Chrome</p>
 
 <h2>Conclusion</h2>
